--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -116,7 +116,7 @@ jobs:
     if: always()
     needs:
       - smoke
-      - fixtures-pypi
+    #   - fixtures-pypi
       - tests-matrix
     steps:
       - run: ${{ (contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')) && 'false' || 'true' }}
