--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -96,7 +96,7 @@ jobs:
       python-version: ${{ matrix.python-version }}
       run-mypy: ${{ needs.changes.outputs.src == 'true' }}
       run-pytest: ${{ needs.changes.outputs.tests == 'true' }}
-      run-pytest-export: ${{ needs.changes.outputs.src == 'true' }}
+      # run-pytest-export: ${{ needs.changes.outputs.src == 'true' }}
     secrets: inherit
     strategy:
       matrix:
@@ -116,7 +116,6 @@ jobs:
     if: always()
     needs:
       - smoke
-    #   - fixtures-pypi
       - tests-matrix
     steps:
       - run: ${{ (contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')) && 'false' || 'true' }}
