--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,8 @@ black = "^24.3.0"
 # Local logger enrichment
 rich = "^13.7.1"
 
+[tool.poetry.group.typing.dependencies]
+mypy = "^1.9.0"
 
 # [tool.poetry.group.docs.dependencies]
 
