--- a/.github/workflows/.tests-matrix.yml
+++ b/.github/workflows/.tests-matrix.yml
@@ -62,7 +62,7 @@ jobs:
         with:
           args: --with github-actions
 
-      - run: poetry run pytest --integration -v
+      - run: poetry run pytest -v
         env:
           POETRY_TEST_INTEGRATION_GIT_USERNAME: ${{ github.actor }}
           POETRY_TEST_INTEGRATION_GIT_PASSWORD: ${{ github.token }}
