--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,17 +88,23 @@ enable_error_code = [
     "redundant-expr",
     "truthy-bool",
 ]
-# exclude = [
-#     "tests/fixtures",
-#     "tests/masonry/builders/fixtures",
-#     "tests/utils/fixtures",
-# ]
+exclude = [
+    "tests/fixtures",
+    "tests/masonry/builders/fixtures",
+    "tests/utils/fixtures",
+]
 
-# use of importlib-metadata backport makes it impossible to satisfy mypy
-# without some ignores: but we get different sets of ignores at different
-# python versions.
-[[tool.mypy.overrides]]
-warn_unused_ignores = false
+# # use of importlib-metadata backport makes it impossible to satisfy mypy
+# # without some ignores: but we get different sets of ignores at different
+# # python versions.
+# [[tool.mypy.overrides]]
+# module = [
+#     'poetry.plugins.plugin_manager',
+#     'poetry.repositories.installed_repository',
+#     'tests.console.commands.self.test_show_plugins',
+#     'tests.helpers',
+# ]
+# warn_unused_ignores = false
 
 [[tool.mypy.overrides]]
 module = [
